additionalCSS/footerSection.css
.lastMsg {
  margin: 60px 24px;
}

.lastMsgText {
  color: #172b4d;
  font-family: "Inter", sans-serif;
  font-weight: 700;
  font-size: 40px;
  text-align: center;
  line-height: 52px;
  font-style: normal;
}

.click:hover {
  cursor: pointer;
  background-color: #008552;
}

.contactForm {
  display: flex;
  flex-direction: column;
  justify-content: center;
  justify-self: center;
  /* width: 90%; */
  /* margin: auto; */
  padding: 0 24px;
  text-align: center;
}

.btn-center {
  display: flex;
  justify-content: center;
}

.fText {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #6b778c;
  font-style: normal;
  padding: 15px;
}

:hover::placeholder {
  transform: translate(10px);
}

form input {
  width: 327px;
  height: 48px;
  border-radius: 4px;
  border: 1px solid #d0d9d4;
  background: #fff;
}

.fEmail {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  margin-top: 24px;
  color: #6b778c;
  font-style: normal;
  padding: 15px;
}

form textarea {
  width: 327px;
  height: 114px;
  border-radius: 4px;
  border: 1px solid #60c095;
  margin-top: 24px;
  background: #fff;
}

.fTextArea {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  margin-top: 24px;
  color: #091e42;
  font-style: normal;
  padding-left: 16px;
  padding-top: 12px;
}

.fTextArea::placeholder {
  color: black;
}

.getInTouch {
  padding: 12px;
  background: #36b37f;
  font-family: "Inter", sans-serif;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  letter-spacing: 0.03em;
  color: #fff;
  border-style: none;
  border-radius: 4px;
  margin-top: 24px;
  margin-left: 99px;
}

.footer {
  display: flex;
  flex-direction: column;
}

.footerSocialIcons {
  margin-top: 46px;
  display: flex;
  justify-content: center;
  gap: 20px;
  align-items: center;
}

.footerSocialIconsContainer {
  position: relative;
  display: flex;
  justify-content: center;
}

.footerFrameMob {
  position: absolute;
  bottom: 0;
  right: 0;
}

.footerEmail {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  color: #42526e;
  font-style: normal;
  text-align: center;
  padding-top: 19px;
}

.footerHr {
  display: flex;
  justify-content: center;
}

hr {
  margin: 100px 120px 10px 121px;
  width: 134px;
  height: 4px;
  background: #0d151e;
  border-radius: 10px;
}

